adding source.md file

--- a/models/source_jaffle_shop.yml
+++ b/models/source_jaffle_shop.yml
@@ -18,7 +18,7 @@ sources:
               - not_null
 
           - name: status
-            description: order status
+            description: '{{ doc("status_definitions") }}'
             tests:
               - accepted_values:
                   values: ['placed', 'shipped', 'completed', 'return_pending', 'returned']
